Fixed Text spacing problem, added text to global variable, added opacity to controls, added control UI

--- a/css/main.css
+++ b/css/main.css
@@ -58,11 +58,12 @@ body h1 {
     background-color: rgb(248, 244, 244);
 }
 
-img {
+
+/* img {
     display: flex;
     justify-content: center;
     align-items: center;
-}
+} */
 
 .image-container img {
     width: 100%;
@@ -74,18 +75,6 @@ img {
 .image-container {
     position: relative;
 }
-
-
-/* grid3
-
-.grid3 {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    grid-auto-rows: 250px;
-    grid-auto-flow: dense;
-    background-color: rgb(248, 244, 244);
-    gap: 20px;
-} */
 
 
 /* ///////// */
@@ -100,16 +89,6 @@ img {
     color: wheat;
 }
 
-
-/* canvas  */
-
-
-/* 
-canvas {
-    display: inline-block;
-    margin: 0 auto;
-} */
-
 .meme-generator {
     margin-top: 10vh;
 }
@@ -120,26 +99,119 @@ canvas {
 
 .canvas-container {
     /* margin: 20vh 30vw; */
-    width: 450px;
-    margin-right: 10px;
-    height: 450px;
-    border: 1px solid red;
+    width: 500px;
+    text-align: center;
+    /* margin-right: 10px; */
+    /* height: 450px; */
+    /* border: 1px solid red; */
 }
 
 #my-canvas {
     /* width: 20vw; */
     /* height: 30vh; */
-    width: inherit;
-    height: inherit;
-    object-fit: fill;
+    /* width: inherit;
+    height: inherit; */
+    /* object-fit: fill; */
 }
 
+
+/* canvas controls */
+
 .canvas-controls {
+    opacity: 0;
     margin-left: 10px;
     border: 1px solid black;
     /* margin-left: 20px; */
     width: 450px;
     height: 450px;
+}
+
+
+/* TODDO: add stickers */
+
+.grid3 {
+    display: grid;
+    padding: 10px;
+    /* width: 450px; */
+    /* grid-template-columns:  100px 100px 100px; */
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    /* grid-template-rows: 100px 100px 100px 100px 100px; */
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-areas: "text-line text-line text-line text-line text-line" ". toggle-row add-row delete-row ." "font-up font-down text-left text-center text-right" "change-font change-font change-font text-effect text-color" ". . . share share";
+    /* grid-auto-rows: 250px; */
+    /* grid-auto-flow: dense; */
+    background-color: rgb(248, 244, 244);
+    gap: 7px;
+    border: 1px solid blue;
+    justify-content: center;
+}
+
+.text-line {
+    grid-area: text-line;
+    border: 1px solid red;
+    border-radius: 20px;
+    line-height: 50px;
+    font-size: larger;
+    text-align: center;
+}
+
+.toggle-row {
+    grid-area: toggle-row;
+}
+
+.add-row {
+    grid-area: add-row;
+}
+
+.delete-row {
+    grid-area: delete-row;
+}
+
+.font-up {
+    grid-area: font-up;
+}
+
+.font-down {
+    grid-area: font-down;
+}
+
+.text-left {
+    grid-area: text-left;
+}
+
+.text-right {
+    grid-area: text-right;
+}
+
+.text-center {
+    grid-area: text-center;
+}
+
+.change-font {
+    grid-area: change-font;
+    justify-content: center;
+    font-size: larger;
+    text-align: center;
+}
+
+.text-effect {
+    grid-area: text-effect;
+}
+
+.text-color {
+    grid-area: text-color;
+}
+
+.share {
+    grid-area: share;
+}
+
+.canvas-controls img {
+    width: 50px;
+    height: 50px;
+    border: 1px solid black;
+    border-radius: 10px;
+    padding: 5px;
 }
 
 
